fixed desktop menu spacing

--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ img {
 
 /* Desktop Menu */
 .desktop-main-menu {
-  margin-right: 50px;
+  margin-right: 30px;
 }
 
 .desktop-main-menu ul {
